// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/group/GroupList should match snapshot 1`] = `
<AbstractList
  actions={
    Object {
      "getData": [MockFunction],
    }
  }
  data={
    Array [
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN",
        "has_syncables": false,
        "id": "123",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
    ]
  }
  emptyListTextDefaultMessage="test"
  emptyListTextId="test"
  groups={Array []}
  header={<Header />}
  isModeSync={false}
  noPadding={false}
  onGroupRemoved={[MockFunction]}
  onPageChangedCallback={[MockFunction]}
  removeGroup={[MockFunction]}
  renderRow={[Function]}
  setNewGroupRole={[MockFunction]}
  total={1}
  totalGroups={0}
  type="team"
/>
`;

exports[`admin_console/team_channel_settings/group/GroupList should match snapshot with paging 1`] = `
<AbstractList
  actions={
    Object {
      "getData": [MockFunction],
    }
  }
  data={
    Array [
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN0",
        "has_syncables": false,
        "id": "id0",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN1",
        "has_syncables": false,
        "id": "id1",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN2",
        "has_syncables": false,
        "id": "id2",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN3",
        "has_syncables": false,
        "id": "id3",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN4",
        "has_syncables": false,
        "id": "id4",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN5",
        "has_syncables": false,
        "id": "id5",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN6",
        "has_syncables": false,
        "id": "id6",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN7",
        "has_syncables": false,
        "id": "id7",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN8",
        "has_syncables": false,
        "id": "id8",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN9",
        "has_syncables": false,
        "id": "id9",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN10",
        "has_syncables": false,
        "id": "id10",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN11",
        "has_syncables": false,
        "id": "id11",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN12",
        "has_syncables": false,
        "id": "id12",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN13",
        "has_syncables": false,
        "id": "id13",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN14",
        "has_syncables": false,
        "id": "id14",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN15",
        "has_syncables": false,
        "id": "id15",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN16",
        "has_syncables": false,
        "id": "id16",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN17",
        "has_syncables": false,
        "id": "id17",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN18",
        "has_syncables": false,
        "id": "id18",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN19",
        "has_syncables": false,
        "id": "id19",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN20",
        "has_syncables": false,
        "id": "id20",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN21",
        "has_syncables": false,
        "id": "id21",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN22",
        "has_syncables": false,
        "id": "id22",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN23",
        "has_syncables": false,
        "id": "id23",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN24",
        "has_syncables": false,
        "id": "id24",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN25",
        "has_syncables": false,
        "id": "id25",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN26",
        "has_syncables": false,
        "id": "id26",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN27",
        "has_syncables": false,
        "id": "id27",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN28",
        "has_syncables": false,
        "id": "id28",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
      Object {
        "allow_reference": true,
        "create_at": 1,
        "delete_at": 0,
        "description": "",
        "display_name": "DN29",
        "has_syncables": false,
        "id": "id29",
        "member_count": 3,
        "name": "group_name",
        "remote_id": "",
        "scheme_admin": false,
        "source": "",
        "update_at": 1,
      },
    ]
  }
  emptyListTextDefaultMessage="test"
  emptyListTextId="test"
  groups={Array []}
  header={<Header />}
  isModeSync={false}
  noPadding={false}
  onGroupRemoved={[MockFunction]}
  onPageChangedCallback={[MockFunction]}
  removeGroup={[MockFunction]}
  renderRow={[Function]}
  setNewGroupRole={[MockFunction]}
  total={30}
  totalGroups={0}
  type="team"
/>
`;
